feat/'atualized html and css'

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
+    <h1>PIZZARIA BRASIL</h1>
+        <span></span>
     <main>
+        
         <div class="hero-wrapper">
             <img src="./src/imgs/logo-pizzaria.png" alt="logo pizzaria">
             <div>
@@ -32,7 +35,7 @@
     </main>
     <section>
         <article class="title-section">
-            <p>FALCATRUAS DE MENU</p>
+            <p>MENU</p>
             <div class="line"></div>
         </article>
         <article class="menu">
@@ -54,10 +57,10 @@
                     <h3>À LA DIREITA</h3>
                     <ul>
                         <li>BOLSOLÃO DO "MEC"<p>R$ 18,8 BILHÕES</p></li>
-                        <li>ESQUEMA DOS TRATORESR$ 3 BILHÕES<p>R$ 3 BILHÕES</p></li>
+                        <li>ESQUEMA DOS TRATORES<p>R$ 3 BILHÕES</p></li>
                         <li>ORÇAMENTO SECRETO<p>SE EU TE CONTAR, VOU TER QUE TE MATAR</p></li>
-                        <li>RACHADINHAS DO 01R$ 6 MILHÕES<p>R$ 6 MILHÕES</p></li>
-                        <li>COVID-19CUSTO AINDA NÃO FECHADO<p>CUSTO AINDA NÃO FECHADO</p></li>
+                        <li>RACHADINHAS DO 01<p>R$ 6 MILHÕES</p></li>
+                        <li>COVID-19<p>CUSTO AINDA NÃO FECHADO</p></li>
                     </ul>
                 </div>
                 <img src="./src/imgs/image-menu-tanque.png" alt="imagem carta-tanque">
