feat/'ALTERADO TEXTO NO HTML E MUDANÇAS DE ALINHAMENTO NO CSS'

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                     <ul>
                         <li>BOLSOLÃO DO "MEC"<p>R$ 18,8 BILHÕES</p></li>
                         <li>ESQUEMA DOS TRATORES<p>R$ 3 BILHÕES</p></li>
-                        <li>ORÇAMENTO SECRETO<p>SE EU TE CONTAR, VOU TER QUE TE MATAR</p></li>
-                        <li>RACHADINHAS DO 01<p>R$ 6 MILHÕES</p></li>
-                        <li>COVID-19<p>CUSTO AINDA NÃO FECHADO</p></li>
+                        <li>ORÇAMENTO SECRETO<p>R$ 5 BILHÕES</p></li>
+                        <li>RACHADINHAS DO "01"<p>R$ 6 MILHÕES</p></li>
+                        <li>COVID-19<p>R$ 15 BILHÕES</p></li>
                     </ul>
                 </div>
                 <img src="./src/imgs/image-menu-tanque.png" alt="imagem carta-tanque">
